test/Fail/Erasure-subtyping-2.err
Erasure-subtyping-2.agda:4.7-21: error: [WrongQuantityInLambda]
Incorrect quantity annotation in lambda
when checking that the expression λ (@0 x) → g x has type A → B
